Updated to 1.20.5 Removed modonomicon and moonlight lib and reachentityattributes Updated JiJ system Changed climbing flag in Cole to boolean Added focus exhaustion for dragon talking Made DragonHeadBlock waterloggable Commented out MidnightLib until updated Updated deps Removed empty ScytheOfQuakes animations Added MINEABLE_WITH_SCYTHE tag Renamed IronScytheItem to ScytheItem